@@ -125,9 +125,9 @@ main (int argc, char **argv)
   GConfChangeSet *changeset = NULL;
   GladeXML       *dialog;
 
-  bindtextdomain (PACKAGE, GNOMELOCALEDIR);
-  bind_textdomain_codeset (PACKAGE, "UTF-8");
-  textdomain (PACKAGE);
+  bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
+  bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
+  textdomain (GETTEXT_PACKAGE);
 
   gnome_program_init (argv[0], VERSION, LIBGNOMEUI_MODULE, argc, argv,
 		      GNOME_PARAM_APP_DATADIR, GNOMECC_DATA_DIR,
