@@ -1,3 +1,8 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* main.c: s/PACKAGE/GETTEXT_PACKAGE/g
+	* gnome-ui-properties.c: Same here.
+	
 2002-02-10  Richard Hestilow  <hestilow@ximian.com>
 
 	* gnome-ui-properties.c (main): Create changeset.
